// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`processScriptFile() > should correctly parse a script 1`] = `
{
  "code": "// @ts-nocheck
function test() {
    show_debug_message("Test");
}
",
}
`;

exports[`processScriptFile() > should correctly parse a script when arguments have default values 1`] = `
{
  "code": "// @ts-nocheck
function test(i = 2, j = "hello") {
    return i == j;
}
",
}
`;

exports[`processScriptFile() > should correctly parse a script where functions have arguments 1`] = `
{
  "code": "// @ts-nocheck
function test(i, j) {
    return i == j;
}
",
}
`;

exports[`processScriptFile() > should correctly parse a script with a bunch of stuff in it 1`] = `
{
  "code": "// @ts-nocheck
function test2(i = 2, j = "hello") {
    return i == j;
}
function test3(i = 2, j = "hello") {
    return i == j;
}
function test3(i = 2, j = "hello") {
    var a = i * 2;
    return j + a;
}
function test4() {
    var a = 2, b = 5;
    return a * b;
}
",
}
`;

exports[`processScriptFile() > should correctly parse a script with a class 1`] = `
{
  "code": "function Player(_name) constructor {
    self.name = _name;
    static sayHi = function () {
        show_debug_message(self.name);
    };
}
function PlayerMultipleArgs(_name, _num) constructor {
    self.name = _name;
    static sayHi = function () {
        show_debug_message(self.name);
    };
}
function PlayerNoArgs() constructor {
    static sayHi = function () {
        show_debug_message("Hi!");
    };
}
function PlayerNoArgsTwo() constructor {
    static sayHi = function (name) {
        show_debug_message("Hi " + name);
    };
}
function PlayerNoArgsThree() constructor {
    self.name = "Ciaone";
    static sayHi = function () {
        show_debug_message("Hi " + self.name);
    };
}
",
}
`;

exports[`processScriptFile() > should correctly parse a script with a class and inheritance 1`] = `
{
  "code": "function Entity(_name) constructor {
    self.name = _name;
    static sayHi = function () {
        show_debug_message(self.name);
    };
}
function Player(name) : Entity(name) constructor {
    static __super_Player_sayHi = sayHi;
    static sayHi = function () {
        __super_Player_sayHi();
        show_debug_message("Override sayHi");
    };
}
function EntityTwo() constructor {
    static sayHi = function (_name) {
        show_debug_message(_name);
    };
}
function PlayerTwo(_name) : EntityTwo() constructor {
    self.name = _name;
    static __super_PlayerTwo_sayHi = sayHi;
    static sayHi = function () {
        __super_PlayerTwo_sayHi(self.name);
    };
}
function EntityThree() constructor {
    static sayHi = function (_name) {
        show_debug_message(_name);
    };
}
function PlayerThree() : EntityThree() constructor {
    static __super_PlayerThree_sayHi = sayHi;
    static sayHi = function (name) {
        __super_PlayerThree_sayHi(string_upper(name));
    };
}
",
}
`;

exports[`processScriptFile() > should correctly parse a script with const and let declarations 1`] = `
{
  "code": "// @ts-nocheck
function test() {
    var a = 2, b = 5;
    var c = 2, d = 5;
    var s = 1;
    var g = 9;
    return a * b + c * d + s + g;
}
",
}
`;
